<resources>
    <string name="app_name">Catalogo_Livros</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_pesquisar">Pesquisar</string>
    <string name="txt_pesquisarpor">Pesquisa Por</string>
    <string name="txt_todos">Todos</string>
    <string name="txt_id">Id</string>
    <string name="txt_titulo">Título</string>
    <string name="txt_autor">Autor</string>
    <string name="txt_ano">Ano</string>
    <string name="txt_salvar">Salvar</string>
    <string name="txt_voltar">Voltar</string>
    <string name="title_activity_tela_cadastrar">Catálogo_Livros</string>
    <string name="title_activity_tela_pesquisar">Catálogo_Livros</string>


</resources>
