<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_tela_cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="330dp">

        <RadioButton
            android:id="@+id/radioTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_titulo"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="323dp" />

        <RadioButton
            android:id="@+id/radioAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ano"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="323dp" />

        <RadioButton
            android:id="@+id/radioAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_autor"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="323dp" />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pesquisar"/>

</LinearLayout>